# rust-newspaper-dev

./: LICENSE  README.md  main.py  pyproject.toml
src/: counter_app.py  main.py
