[project]
name = "rust-newspaper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.13.3"
authors = [
    { name = "rust-newspaper", email = "59505647+AkiPoh@users.noreply.github.com" }
]
dependencies = [
  "flet==0.28.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.rust-newspaper"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "rust-newspaper"

# company name to display in about app dialogs
company = "rust-newspaper"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by rust-newspaper"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}